[tool.poetry]
name = "sequences"
version = "0.1.0"
description = ""
authors = ["Pedro Arciniegas Diaz <parciniegas@ehotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "sequences.main:start"